# TitanRTS

./: .gitignore  CMakeLists.txt  README.md
assets/: appCfg.ini
cmake/: FindSDL2_ttf.cmake
include/: App.h
include/Core/: Color.h  Dimension.h  Font.h  Surface.h
include/Core/Config/: AppConfig.h
include/UI/: Caption.h  Font.h
include/UI/Controls/: Button.h
src/: App.cpp  main.cpp
src/Core/: Color.cpp  Dimension.cpp  Font.cpp  Surface.cpp
src/Core/Config/: AppConfig.cpp
